--- a/wolfssl/crypto/crypto.vcxproj
+++ b/wolfssl/crypto/crypto.vcxproj
@@ -129,6 +129,11 @@
       <Project>{73973223-5ee8-41ca-8e88-1d60e89a237b}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="certfields.h" />
+    <ClInclude Include="common.h" />
+    <ClInclude Include="globals.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
