--- a/wolfssl/crypto/crypto.vcxproj.filters
+++ b/wolfssl/crypto/crypto.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\IDE\WIN\user_settings.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
