--- a/wolfssl/crypto/crypto.vcxproj.filters
+++ b/wolfssl/crypto/crypto.vcxproj.filters
@@ -32,5 +32,17 @@
     <ClInclude Include="..\IDE\WIN\user_settings.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="callbacks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="requests.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="verify.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="junkstobedeleted.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
