--- a/wolfssl/crypto/crypto.vcxproj
+++ b/wolfssl/crypto/crypto.vcxproj
@@ -131,9 +131,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\IDE\WIN\user_settings.h" />
+    <ClInclude Include="callbacks.h" />
     <ClInclude Include="certfields.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="globals.h" />
+    <ClInclude Include="junkstobedeleted.h" />
+    <ClInclude Include="requests.h" />
+    <ClInclude Include="verify.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
