--- a/wolfssl/crypto/crypto.vcxproj.filters
+++ b/wolfssl/crypto/crypto.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="argparse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="misc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
