--- a/wolfssl/crypto/crypto.vcxproj
+++ b/wolfssl/crypto/crypto.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="certfields.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="globals.h" />
+    <ClInclude Include="misc.h" />
     <ClInclude Include="requests.h" />
     <ClInclude Include="verify.h" />
   </ItemGroup>
